feat: re-enable jwt auth
