# data/openapi/v1.yml
@@ -34,6 +34,8 @@ paths:
       summary: Search for a vehicle by VIN
       operationId: getVPICVin
       tags: ['VPIC']
+      security:
+        - BearerAuth: [vpic]
       parameters:
         - $ref: '#/components/parameters/vin'
       responses:
@@ -59,6 +61,8 @@ paths:
     get:
       summary: Get a list of supported vehicle years
       operationId: getVPICYears
+      security:
+        - BearerAuth: [vpic]
       tags: ['VPIC']
       responses:
         '200':
@@ -82,6 +86,8 @@ paths:
       summary: Get a list of supported vehicle makes by year
       operationId: getVPICYearMakes
       tags: ['VPIC']
+      security:
+        - BearerAuth: [vpic]
       parameters:
         - $ref: '#/components/parameters/year'
       responses:
@@ -106,6 +112,8 @@ paths:
       summary: Get a list of supported vehicle models by make and year
       operationId: getVPICMYearMakeModels
       tags: ['VPIC']
+      security:
+        - BearerAuth: [vpic]
       parameters:
         - $ref: '#/components/parameters/year'
         - $ref: '#/components/parameters/makeId'
@@ -131,6 +139,8 @@ paths:
       summary: Get a list of supported vehicle attributes by model ID and year
       operationId: getVPICModelAttributesByModelIdAndYear
       tags: ['VPIC']
+      security:
+        - BearerAuth: [vpic]
       parameters:
         - $ref: '#/components/parameters/modelId'
         - $ref: '#/components/parameters/year'
@@ -152,6 +162,11 @@ paths:
         '500':
           $ref: '#/components/responses/500'
 components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   parameters:
     vin:
       name: vin
